--- a/Clock-iOS/Base.lproj/Main.storyboard
+++ b/Clock-iOS/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="19455" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="41n-d6-Bj3">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="19455" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="Lnc-yn-ljw">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
@@ -89,15 +89,7 @@
                             <constraint firstAttribute="bottom" secondItem="Y9p-oy-Qkn" secondAttribute="bottom" id="rzV-08-7Wa"/>
                         </constraints>
                     </view>
-                    <navigationItem key="navigationItem" title="Alarme" id="Rwa-Md-Uzh">
-                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="nsr-px-U6k">
-                            <color key="tintColor" systemColor="systemOrangeColor"/>
-                            <connections>
-                                <action selector="openAddClockButtonClick:" destination="BYZ-38-t0r" id="dT0-hI-qqJ"/>
-                                <segue destination="IeY-iC-XuB" kind="show" id="6aV-gh-TUj"/>
-                            </connections>
-                        </barButtonItem>
-                    </navigationItem>
+                    <navigationItem key="navigationItem" title="Alarme" id="Rwa-Md-Uzh"/>
                     <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" translucent="NO" prompted="NO"/>
                     <connections>
                         <outlet property="alarmsTable" destination="Y9p-oy-Qkn" id="NLb-W1-MSo"/>
@@ -112,20 +104,50 @@
             <objects>
                 <viewController storyboardIdentifier="TimeViewController" id="7M6-na-Cm6" customClass="TimeViewController" customModule="Clock_iOS" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="bQc-dd-1f5">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="808"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <viewLayoutGuide key="safeArea" id="gOR-lA-WWu"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                     </view>
+                    <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" translucent="NO" prompted="NO"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="XxF-1f-XS8" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-1471" y="-25"/>
         </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="5k8-iw-3OP">
+            <objects>
+                <navigationController id="Lnc-yn-ljw" sceneMemberID="viewController">
+                    <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" translucent="NO" prompted="NO"/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" translucent="NO" id="Wr5-IF-S6R">
+                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="41n-d6-Bj3" kind="relationship" relationship="rootViewController" id="YxE-TU-gP5"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Blh-G5-y39" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-3858" y="-25"/>
+        </scene>
         <!--Main Page View Controller-->
         <scene sceneID="C64-kx-ovk">
             <objects>
-                <pageViewController autoresizesArchivedViewToFullSize="NO" transitionStyle="scroll" navigationOrientation="horizontal" spineLocation="none" id="41n-d6-Bj3" customClass="UIMainPageViewController" customModule="Clock_iOS" customModuleProvider="target" sceneMemberID="viewController"/>
+                <pageViewController autoresizesArchivedViewToFullSize="NO" transitionStyle="pageCurl" navigationOrientation="horizontal" spineLocation="none" id="41n-d6-Bj3" customClass="UIMainPageViewController" customModule="Clock_iOS" customModuleProvider="target" sceneMemberID="viewController">
+                    <extendedEdge key="edgesForExtendedLayout"/>
+                    <navigationItem key="navigationItem" id="nNo-Xy-irO">
+                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="nsr-px-U6k">
+                            <color key="tintColor" systemColor="systemOrangeColor"/>
+                            <connections>
+                                <action selector="openAddClockButtonClick:" destination="BYZ-38-t0r" id="dT0-hI-qqJ"/>
+                                <segue destination="IeY-iC-XuB" kind="show" id="6aV-gh-TUj"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                    <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" translucent="NO" prompted="NO"/>
+                </pageViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="3VD-02-qES" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-3122" y="-25"/>
